--- a/.github/workflows/hell-o.yml
+++ b/.github/workflows/hell-o.yml
@@ -16,7 +16,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Echo 1
-      run : echo 'hell-o' && echo "aa-bb"
+      run : |
+        echo 'hell-o'
+        echo "${{ env.APP_NAME }}"
   
   job_2:
     runs-on: ubuntu-latest
@@ -29,5 +31,5 @@ jobs:
     needs: [job_A, job_2]
     steps:
     - name: Echo Fin
-      run : echo 'after all' && echo ${{ VAR1 }}
+      run : echo 'after all' && echo ${{ env.VAR1 }}
 #
