--- a/.github/workflows/hell-o.yml
+++ b/.github/workflows/hell-o.yml
@@ -11,7 +11,7 @@ on:
     branches: 
       - main
     paths-ignore:
-      - /.github/workflow/*
+      - '/.github/workflow/**'
 
 jobs:
   cloneNlist:
