--- a/.github/workflows/self-hosted.yml
+++ b/.github/workflows/self-hosted.yml
@@ -2,7 +2,7 @@ name: self-hosted
 on: [workflow_dispatch]
 jobs:
   test:
-    runs-on: self-hosted
+    runs-on: ubuntu_latest # self-hosted
     steps:
       - name: first step
         run : echo 'the very first step'
