--- a/.github/workflows/self-hosted.yml
+++ b/.github/workflows/self-hosted.yml
@@ -3,7 +3,8 @@ on: [workflow_dispatch]
 
 jobs:
   test:
-    runs-on: ubuntu_latest # self-hosted
+    runs-on: ubuntu_latest
+    # runs-on: self-hosted
     steps:
       - name: first step
         run : echo 'the very first step'
