--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
     - name: clone
       uses: actions/checkout@v4
+    - name: echo 1
+      run : echo '-------------> 1'
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@v4
       with:
