--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -15,7 +15,9 @@ jobs:
     - name: clone
       uses: actions/checkout@v4
     - name: echo 1
-      run : echo '-------------> 1'
+      run : |
+        echo '-------------> 1'
+        cat ./.github.workflows/pages.yml
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@v4
       with:
