--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -17,6 +17,7 @@ jobs:
     - name: echo 1
       run : |
         echo '-------------> 1'
+        ls -lAh
         cat ./.github.workflows/pages.yml
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@v4
